Style & layout fixes: aligned location icon, adjusted image size, flex row for card info

--- a/src/style.css
+++ b/src/style.css
@@ -9,6 +9,8 @@ nav{
    align-items: center;
     display:flex;
     background-color: #F55A5A;
+    letter-spacing: -1.2px;
+   
 }
 
 .Global--logo{
@@ -27,22 +29,79 @@ nav{
     letter-spacing: -7.5%;
 }
 
-.card--image{
+.card {
     display: flex;
-position: relative;
-border-radius: 5px;
-width: 125px;
-height: 168px;
-left: 40px;
-top: 45px;
-margin-bottom: 36px;
+    width: 470px;
+    height: 168px;
+    padding-left: 40px;
+    padding-top: 45px;
+    background-color:white ;
     
 }
 
-.card--loc{
+.card--image{
     position: relative;
-    flex-direction:column;
-    margin-left: 184px;
-    width: 7px;
+    border-radius: 5px;
+    width: 125px;
+    height: 168px;
+    object-fit: cover;
+
     
+}
+
+.card--info {
+    display: flex;
+ 
+ padding-top: 20px;
+  padding-left: 20px;
+  position: relative;
+   
+}
+
+.card--loc{
+    display: flex;
+    align-items: center;
+     padding-right: 4px;
+     width: 7px;
+     height: 9.55px;
+     display: block;
+    
+}
+
+.card--loocation{
+    height: 10px;;
+    
+    color: rgb(43, 40, 58);
+    padding-right: 12px;
+ font-family: "Inter";
+font-size: 10.24px;
+font-weight: 400;
+line-height: 12px;
+letter-spacing: 1.7px;
+text-align: left;
+}
+
+.card--maps{
+color: rgb(145, 142, 155);
+font-family: Inter, sans-serif;
+font-size: 10.24px;
+font-weight: 400;
+line-height: 12px;
+letter-spacing: 0%;
+text-align: left;
+text-decoration-line: underline;
+}
+
+.card--title{
+    position: absolute;
+    height: 33px;
+    width: 350px;
+    margin-top: 17px;
+color: rgb(43, 40, 58);
+font-family: Inter, sans-serif;
+font-size: 25px;
+font-weight: 700;
+line-height: 30px;
+letter-spacing: 0%;
+text-align: left;
 }
